Really fix logo alignment

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -49,7 +49,7 @@
   width: 100%;
 
   .site-nav {
-    margin-left: auto;
+    margin-left: 0;
 
     @include breakpoint($small) {
       float: right;
